@@ -1,14 +1,13 @@
 package com.example.demo.scheduler;
 
-import com.example.demo.viewmodels.CarInsuranceDTO;
 import com.example.demo.services.CarInsuranceService;
+import com.example.demo.viewModels.CarInsuranceDTO;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class EndDatesChecker {
@@ -21,11 +20,11 @@ public class EndDatesChecker {
 
     @Scheduled(cron = "0 59 23 * * ?") // runs every day at 23:59
     public void yourCronScheduledMethod() {
-        List<CarInsuranceDTO> endDateCarInsurances = carInsuranceService.getAll().stream()
+        List<CarInsuranceDTO> endDateCarInsurances = carInsuranceService.findAll().stream()
                 .filter(carInsurance ->
                         carInsurance.getEndDate().isBefore(LocalDate.now().plusMonths(1)))
-                .collect(Collectors.toList());
-        if (endDateCarInsurances.size() > 0){
+                .toList();
+        if (endDateCarInsurances.size() > 0) {
             System.out.println("dziala");
         }
     }
